# persistent-cache

./: .bumpversion.cfg  .pre-commit-config.yaml  README.md  pyproject.toml
src/persistent_cache/: __init__.py
src/persistent_cache/caches/: base.py  deep_learning.py  speedup_deep_learning.py
src/persistent_cache/cli/: clear_cache.py
src/persistent_cache/main/: cache_slot.py  cacheslot.py  decorator.py  hashing.py
src/persistent_cache/models/: __init__.py  function.py  path.py
src/persistent_cache/reducers/: __init__.py  base.py  deep_learning.py  speedup_deep_learning.py
tests/: conftest.py  test_cache.py  test_clear_cache.py  test_deep_learning_cache.py
